# smarthome-openthread-mqttsn

./: .clang-format  Kconfig  README.md  west.yml
apps/co2sensor/: CMakeLists.txt  README.md  prj.conf
apps/co2sensor/boards/: nrf52840dongle_nrf52840.conf
apps/co2sensor/src/: main.c
apps/coprocessor/: README.md  prj.conf
apps/coprocessor/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  (+1 more)
apps/pms5003/: README.md  prj.conf
apps/pms5003/src/: main.c
apps/powermeter/: CMakeLists.txt  README.md  debug.conf  prj.conf
apps/router/: CMakeLists.txt  README.md  prj.conf
doc/: add-device-to-network.md  update.md
modules/: CMakeLists.txt  Kconfig
modules/mqttsndev/: CMakeLists.txt  Kconfig  README.md  lib.c  private.h  settings.c
modules/rust/: CMakeLists.txt  Cargo.toml  Kconfig  README.md
modules/rust/smarthome/: Cargo.toml  cbindgen.toml
modules/rust/smarthome/src/: capi.rs  lib.rs  logger.rs
modules/rust/sml/: Cargo.toml  build.rs
modules/rust/sml/src/: error.rs  frame.rs  lib.rs  macros.rs  tlv.rs
modules/rust/sml/templates/: messages.rs
modules/watchdog/: CMakeLists.txt  Kconfig  lib.c
scripts/: nrfutil
snippets/smarthome-nrf52dk-nouart/: snippet.yml
snippets/smarthome-nrf52dongle-extreg/: smarthome-nrf52dongle-extreg.conf  smarthome-nrf52dongle-extreg.overlay  snippet.yml
snippets/smarthome-nrf52dongle-nouart/: snippet.yml
snippets/smarthome-thread-device/: smarthome-thread-device.conf  snippet.yml
snippets/smartmeter-nrf52dongle-extreg/: snippet.yml
snippets/smartmeter-thread-device/: smartmeter-thread-device.conf
(+14 files in other folders)
