[package]
name = "sml"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = "0.19"
crc = "3.0"
futures-util = { version = "0.3", default-features = false }
io = { path = "../io", default-features = false }
log = { version = "0.4", default-features = false }
pin-project = "1.0"

[dev-dependencies]
env_logger = "0.11"
futures-util = { version = "0.3" }
io = { path = "../io", features = ["std"] }
test-log = "0.2"
tokio = { version = "1.19", features = ["rt", "macros"] }

[build-dependencies]
askama = "0.16"
convert_case = "0.11"
env_logger = "0.11"
lazy_static = "1.4"
log = "0.4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["std"]
std = []

